--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -19,7 +19,7 @@ jobs:
     - name: 🧰 Setup .NET Core
       uses: actions/setup-dotnet@v1.5.0
       with:
-        dotnet-version: 3.1.300
+        dotnet-version: '3.1.x'
 
     - name: 🛠 Install Tye tools
       run: |
