--- a/tye.yaml
+++ b/tye.yaml
@@ -5,6 +5,15 @@
 #    https://aka.ms/AA7q20u
 #
 name: microservice
+ingress:
+  - name: ingress
+    bindings:
+      - port: 8080
+    rules:
+      - path: /
+        service: frontend
+      - path: /backend
+        service: backend
 services:
 - name: backend
   project: backend\backend.csproj
