--- a/tye.yaml
+++ b/tye.yaml
@@ -4,7 +4,17 @@
 # when you've given us a try, we'd love to know what you think:
 #    https://aka.ms/AA7q20u
 #
+
 name: microservice
+ingress:
+  - name: ingress
+    bindings:
+      - port: 8080
+    rules:
+      - path: /
+        service: frontend
+      - path: /backend
+        service: backend
 services:
 - name: backend
   project: backend\backend.csproj
