--- a/.github/workflows/docker-kubernetes.yml
+++ b/.github/workflows/docker-kubernetes.yml
@@ -10,6 +10,7 @@ env:
   AKS_RESOURCE_GROUP: azure-automation-rg
   ACR_RESOURCE_URI: azuretoolsacr.azurecr.io
   
+  
 jobs:
 
   build:
@@ -26,11 +27,12 @@ jobs:
        username: ${{ secrets.ACR_USER }}
        password: ${{ secrets.ACR_PASSWORD }}
        
-    - name: Kubernetes set context
+    - name: 📃 Set AKS context
       uses: azure/aks-set-context@v1
       with:
-       method: resource-group
-       resource-group: ${{ env.AKS_RESOURCE_GROUP }}
+        creds: '${{ secrets.AZURE_CREDENTIALS }}'
+        cluster-name: ${{ env.AZURE_AKS_CLUSTER }}
+        resource-group: ${{ env.AKS_RESOURCE_GROUP }}
      
     - name: Build the Docker image
       run: 
