--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -14,7 +14,7 @@ jobs:
   build:
     if: github.event_name == 'push' && contains(toJson(github.event.commits), '***NO_CI***') == false && contains(toJson(github.event.commits), '[ci skip]') == false && contains(toJson(github.event.commits), '[skip ci]') == false
     name: tye deploy
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
     - name: ✔ Checkout
       uses: actions/checkout@v2
