--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -39,9 +39,11 @@ jobs:
       with:
        method: kubeconfig
        kubeconfig: ${{ secrets.KUBE_CONFIG }}
+     
+    - name: 🌐 Install ingress-nginx
+      run: |
+        kubectl apply -f https://aka.ms/tye/ingress/deploy
 
-
-   
     - name: ☸ tye deploy
       run: |
         tye deploy -v Debug
