--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -43,7 +43,7 @@ jobs:
     - uses: azure/aks-set-context@v2.0
       with:
        resource-group: ${{ env.AKS_RESOURCE_GROUP }}
-       cluster_name: ${{env.AZURE_AKS_CLUSTER }}
+       cluster-name: ${{env.AZURE_AKS_CLUSTER }}
      
     - name: 🌐 Install ingress-nginx
       run: |
