--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -42,7 +42,7 @@ jobs:
      
     - name: 🌐 Install ingress-nginx
       run: |
-        kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/master/deploy/static/provider/cloud/deploy.yaml
+        kubectl apply -f https://aka.ms/tye/ingress/deploy
     - name: ☸ tye deploy
       run: |
         tye deploy -v Debug
