--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -42,7 +42,7 @@ jobs:
        
     - name: 🌐 redis config
       run: |
-       kubectl apply -f example-redis-config.yaml
+       kubectl apply -f redis-config.yaml
        kubectl apply -f https://raw.githubusercontent.com/kubernetes/website/main/content/en/examples/pods/config/redis-pod.yaml
      
     - name: ☸ tye deploy
