--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -46,6 +46,17 @@ jobs:
         creds: '${{ secrets.AZURE_CREDENTIALS }}'
         cluster-name: ${{ env.AZURE_AKS_CLUSTER }}
         resource-group: ${{ env.AKS_RESOURCE_GROUP }}
+        
+#     - uses: azure/login@v1
+#        with:
+#        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+#          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+#          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+    
+#    - uses: azure/aks-set-context@v2.0
+#      with:
+#     resource-group: "<resource group name>"
+#     cluster-name: "<cluster name>"
      
     - name: ☸ tye deploy
       run: |
