--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -47,16 +47,16 @@ jobs:
 #         cluster-name: ${{ env.AZURE_AKS_CLUSTER }}
 #         resource-group: ${{ env.AKS_RESOURCE_GROUP }}
         
-#     - uses: azure/login@v1
-#        with:
-#        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-#          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-#          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+    - uses: azure/login@v1
+       with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
     
-#    - uses: azure/aks-set-context@v2.0
-#      with:
-#     resource-group: "<resource group name>"
-#     cluster-name: "<cluster name>"
+   - uses: azure/aks-set-context@v2.0
+      with:
+           resource-group:  ${{ env.AKS_RESOURCE_GROUP }}
+           cluster-name: ${{ env.AZURE_AKS_CLUSTER }}
      
     - name: ☸ tye deploy
       run: |
