--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -47,11 +47,9 @@ jobs:
 #         cluster-name: ${{ env.AZURE_AKS_CLUSTER }}
 #         resource-group: ${{ env.AKS_RESOURCE_GROUP }}
         
-    - uses: azure/login@v1
+    - uses: azure/actions/login@v1
       with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
     
     - uses: azure/aks-set-context@v2.0
       with:
