--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -51,10 +51,16 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
     
-    - uses: azure/aks-set-context@v2.0
+    - name: 📃 Set AKS context
+      uses: azure/K8S-set-context@v1
       with:
-         resource-group:  ${{ env.AKS_RESOURCE_GROUP }}
-         cluster-name: ${{ env.AZURE_AKS_CLUSTER }}
+       method: kubeconfig
+       kubeconfig: ${{ secrets.KUBE_CONFIG }}
+    
+#     - uses: azure/aks-set-context@v2.0
+#       with:
+#          resource-group:  ${{ env.AKS_RESOURCE_GROUP }}
+#          cluster-name: ${{ env.AZURE_AKS_CLUSTER }}
      
     - name: ☸ tye deploy
       run: |
