--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -34,18 +34,18 @@ jobs:
         username: ${{ secrets.ACR_USER }}  
         password: ${{ secrets.ACR_PASSWORD }}
 
-    - name: 📃 Set AKS context
-      uses: azure/K8S-set-context@v1
-      with:
-       method: kubeconfig
-       kubeconfig: ${{ secrets.KUBE_CONFIG }}
-      
 #     - name: 📃 Set AKS context
-#       uses: azure/aks-set-context@v1
+#       uses: azure/K8S-set-context@v1
 #       with:
-#         creds: '${{ secrets.AZURE_CREDENTIALS }}'
-#         cluster-name: ${{ env.AZURE_AKS_CLUSTER }}
-#         resource-group: ${{ env.AKS_RESOURCE_GROUP }}
+#        method: kubeconfig
+#        kubeconfig: ${{ secrets.KUBE_CONFIG }}
+      
+    - name: 📃 Set AKS context
+      uses: azure/aks-set-context@v1
+      with:
+        creds: '${{ secrets.AZURE_CREDENTIALS }}'
+        cluster-name: ${{ env.AZURE_AKS_CLUSTER }}
+        resource-group: ${{ env.AKS_RESOURCE_GROUP }}
         
 #     - uses: azure/actions/login@v1
 #       with:
