--- a/acr-nginx.yaml
+++ b/acr-nginx.yaml
@@ -17,5 +17,8 @@ spec:
       containers:
       - name: nginx
         image: azuretoolsacr.azurecr.io/nginx:v1
+        imagePullPolicy: Always
+    imagePullSecrets:
+     - name: azuresecret
         ports:
         - containerPort: 80
