--- a/acr-nginx.yaml
+++ b/acr-nginx.yaml
@@ -18,5 +18,7 @@ spec:
       - name: nginx
         image: azuretoolsacr.azurecr.io/nginx:v1
         imagePullPolicy: Always
+      imagePullSecrets:
+       - name: regcred
         ports:
         - containerPort: 80
