--- a/acr-nginx.yaml
+++ b/acr-nginx.yaml
@@ -17,6 +17,7 @@ spec:
       containers:
       - name: nginx
         image: azuretoolsacr.azurecr.io/nginx:v1
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
      imagePullSecrets:
