--- a/acr-nginx.yaml
+++ b/acr-nginx.yaml
@@ -1,10 +1,14 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: deployment
 metadata:
   name: nginx0-deployment
   labels:
     app: nginx0-deployment
 spec:
+   selector:
+     matchLabels:
+       app: authors
+       version: v1
   replicas: 2
   selector:
     matchLabels:
