--- a/acr-nginx.yaml
+++ b/acr-nginx.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
    selector:
      matchLabels:
-       app: authors
+       app: nginx0
        version: v1
   replicas: 2
   selector:
