--- a/acr-nginx.yaml
+++ b/acr-nginx.yaml
@@ -17,8 +17,8 @@ spec:
       containers:
       - name: nginx
         image: azuretoolsacr.azurecr.io/nginx:v1
-     imagePullSecrets:
-     - name: regcred
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
- 
+     imagePullSecrets:
+     - name: regcred
