--- a/acr-nginx.yaml
+++ b/acr-nginx.yaml
@@ -18,6 +18,8 @@ spec:
       - name: nginx
         image: azuretoolsacr.azurecr.io/nginx:v1
         imagePullPolicy: Always
+        command: ["echo"]
+         args: ["SUCCESS"]
         ports:
         - containerPort: 8080
      imagePullSecrets:
