--- a/acr-nginx.yaml
+++ b/acr-nginx.yaml
@@ -19,8 +19,6 @@ spec:
         image: azuretoolsacr.azurecr.io/nginx:v1
         imagePullPolicy: Always
         ports:
-        - name: nginx
-        containerPort: 8080
-        protocol: TCP
+        - containerPort: 8080
      imagePullSecrets:
      - name: regcred1
