--- a/acr-nginx.yaml
+++ b/acr-nginx.yaml
@@ -18,7 +18,8 @@ spec:
       - name: nginx
         image: azuretoolsacr.azurecr.io/nginx:v1
         imagePullPolicy: Always
-         ports:
-        - containerPort: 80
+        ports:
+        - name: nginx
+          containerPort: 8080
      imagePullSecrets:
      - name: regcred1
