--- a/acr-nginx.yaml
+++ b/acr-nginx.yaml
@@ -1,25 +1,29 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:
-  name: nginx0-deployment
-  labels:
+metadata: 
+  labels: 
     app: nginx0-deployment
-spec:
+  name: nginx0-deployment
+spec: 
+  imagePullSecrets: 
+    - 
+      name: regcred1
   replicas: 2
-  selector:
-    matchLabels:
+  selector: 
+    matchLabels: 
       app: nginx0
-  template:
-    metadata:
-      labels:
+  template: 
+    metadata: 
+      labels: 
         app: nginx0
-    spec:
-      containers:
-      - name: nginx
-        image: azuretoolsacr.azurecr.io/nginx:v1
-        imagePullPolicy: Always
-        ports:
-        - name: nginx
-          containerPort: 8080
-  imagePullSecrets:
-    - name: regcred1
+    spec: 
+      containers: 
+        - 
+          image: "azuretoolsacr.azurecr.io/nginx:v1"
+          imagePullPolicy: Always
+          name: nginx
+          ports: 
+            - 
+              containerPort: 8080
+              name: nginx
+
