--- a/acr-nginx.yaml
+++ b/acr-nginx.yaml
@@ -1,29 +1,24 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata: 
-  labels: 
-    app: nginx0-deployment
+metadata:
   name: nginx0-deployment
-spec: 
-  imagePullSecrets: 
-    - 
-      name: regcred1
+  labels:
+    app: nginx0-deployment
+spec:
   replicas: 2
-  selector: 
-    matchLabels: 
+  selector:
+    matchLabels:
       app: nginx0
-  template: 
-    metadata: 
-      labels: 
+  template:
+    metadata:
+      labels:
         app: nginx0
-    spec: 
-      containers: 
-        - 
-          image: "azuretoolsacr.azurecr.io/nginx:v1"
-          imagePullPolicy: Always
-          name: nginx
-          ports: 
-            - 
-              containerPort: 8080
-              name: nginx
-
+    spec:
+      containers:
+      - name: nginx
+        image: azuretoolsacr.azurecr.io/nginx:v1
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 80
+     imagePullSecrets:
+     - name: regcred1
