--- a/acr-nginx.yaml
+++ b/acr-nginx.yaml
@@ -20,5 +20,5 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 80
-     imagePullSecrets:
-     - name: regcred1
+   imagePullSecrets:
+    - name: regcred
