--- a/acr-nginx.yaml
+++ b/acr-nginx.yaml
@@ -16,9 +16,9 @@ spec:
     spec:
       containers:
       imagePullSecrets:
-      - name: regcred
-        imagePullPolicy: Always
+      - name: {{ secrets.imagePullSecrets }}
        - name: nginx
         image: azuretoolsacr.azurecr.io/nginx:v1
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
