--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -57,17 +57,17 @@ jobs:
         namespace: ${{ env.NAMESPACE }}
         arguments: --force true
     
-    # Deploy app to AKS
-    - uses: azure/k8s-deploy@v1
-      with:
-       manifests: |
-          ${{ github.workspace }}/manifests/deployment.yaml
-          ${{ github.workspace }}/manifests/service.yaml
-       images: |
-          ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
-       imagepullsecrets: |
-          ${{ env.SECRET }}
-          namespace: ${{ env.NAMESPACE }}
+#     # Deploy app to AKS
+#     - uses: azure/k8s-deploy@v1
+#       with:
+#        manifests: |
+#           ${{ github.workspace }}/manifests/deployment.yaml
+#           ${{ github.workspace }}/manifests/service.yaml
+#        images: |
+#           ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
+#        imagepullsecrets: |
+#           ${{ env.SECRET }}
+#           namespace: ${{ env.NAMESPACE }}
    
 #     - name: Deploy to k8s
 #       run: kubectl apply -f k8s/ 
