--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -1,67 +1,45 @@
-name: Build and Deploy
-
-on: [push]
-
-env:
-  AZURE_AKS_CLUSTER: toolsakscluster
-  AKS_RESOURCE_GROUP: azure-automation-rg
-  ACR_RESOURCE_URI: azuretoolsacr.azurecr.io
-  AZURE_CONTAINER_REGISTRY: azuretoolsacr
-  PROJECT_NAME: Azure Automation
-  ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
+name: Deploy to AKS Cluster
+on:
+  pull_request:
+    branches:
+    - master
 
 jobs:
   build:
-    if: github.event_name == 'push' && contains(toJson(github.event.commits), '***NO_CI***') == false && contains(toJson(github.event.commits), '[ci skip]') == false && contains(toJson(github.event.commits), '[skip ci]') == false
-    name: tye deploy
     runs-on: ubuntu-latest
     steps:
-    - name: ✔ Checkout
-      uses: actions/checkout@v2
-
-    - name: 🧰 Setup .NET Core
-      uses: actions/setup-dotnet@v1.5.0
-      with:
-        dotnet-version: '3.1.x'
-
-    - name: 🛠 Install Tye tools
-      run: |
-        dotnet tool install -g Microsoft.Tye --version "0.4.0-alpha.20371.1"
-    - name: 🔐 Login to ACR
-      uses: Azure/docker-login@v1  
-      with:  
-        login-server: ${{ env.ACR_RESOURCE_URI }}
-        username: ${{ secrets.ACR_USER }}  
-        password: ${{ secrets.ACR_PASSWORD }}
-
-    - name: 📃 Set AKS context
-      uses: azure/K8S-set-context@v1
-      with:
-       method: kubeconfig
-       kubeconfig: ${{ secrets.KUBE_CONFIG }}
-      
-#     - name: 📃 Set AKS context
-#       uses: azure/aks-set-context@v1
-#       with:
-#         creds: '${{ secrets.AZURE_CREDENTIALS }}'
-#         cluster-name: ${{ env.AZURE_AKS_CLUSTER }}
-#         resource-group: ${{ env.AKS_RESOURCE_GROUP }}
-        
-#     - uses: azure/actions/login@v1
-#       with:
-#         creds: ${{ secrets.AZURE_CREDENTIALS }}
+    - uses: actions/checkout@master
     
-#     - uses: azure/aks-set-context@v2.0
-#       with:
-#          resource-group:  ${{ env.AKS_RESOURCE_GROUP }}
-#          cluster-name: ${{ env.AZURE_AKS_CLUSTER }}
-     
+    - uses: Azure/docker-login@v1
+      with:
+        login-server: azuretoolsacr.azurecr.io
+        username: ${{ secrets.ACR_USERNAME }}
+        password: ${{ secrets.ACR_PASSWORD }}
+    
+    - run: |
+        docker build . -t azuretoolsacr.azurecr.io/k8sflask:${{ github.sha }}
+        docker push azuretoolsacr.azurecr.io/k8sflask:${{ github.sha }}
       
-    - name: 🌐 kubectl apply
-      run: |
-        kubectl apply -f acr-nginx.yaml 
+    # Set the target AKS cluster.
+    - uses: Azure/aks-set-context@v1
+      with:
+        creds: '${{ secrets.AZURE_CREDENTIALS }}'
+        cluster-name: toolsakscluster
+        resource-group: azure-automation-rg
+        
+    - uses: Azure/k8s-create-secret@v1
+      with:
+        container-registry-url: azuretoolsacr.azurecr.io
+        container-registry-username: ${{ secrets.ACR_USERNAME }}
+        container-registry-password: ${{ secrets.ACR_PASSWORD }}
+        secret-name: regcred
 
-     
-    - name: ☸ tye deploy
-      run: |
-        tye deploy --interactive
+    - uses: Azure/k8s-deploy@v1
+      with:
+        manifests: |
+          manifests/deployment.yaml
+          manifests/service.yaml
+        images: |
+          azuretoolsacr.azurecr.io/k8sflask:${{ github.sha }}
+        imagepullsecrets: |
+          regcred
