--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -1,78 +1,25 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: backend
+  name: frontend-app
+  labels:
+    app: frontend
+    env: dev
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
-      app: backend
-  template:
-    metadata:
-      labels:
-        app: backend
-    spec:
-      nodeSelector:
-        "beta.kubernetes.io/os": linux
-      containers:
-      - name: backend
-        image: redis
-        ports:
-        - containerPort: 6379
-          name: redis
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: backend
-spec:
-  ports:
-  - port: 6379
-  selector:
-    app: backend
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: frontend 
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: frontend 
-  strategy:
-    rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 1
-  minReadySeconds: 5 
+      app: frontend
   template:
     metadata:
       labels:
         app: frontend
+        env: dev
     spec:
-      nodeSelector:
-        "beta.kubernetes.io/os": linux
       containers:
-      - name: frontend
-        image: azuretoolsacrr.azurecr.io/frontend:v1
+      - name: flask
+        image: cloudlifeacr.azurecr.io/frontend
         ports:
-        - containerPort: 80
-        resources:
-          requests:
-            cpu: 250m
-          limits:
-            cpu: 500m
-        env:
-        - name: REDIS
-          value: "backend"
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: frontend
-spec:
-  type: LoadBalancer
-  ports:
-  - port: 80
-  selector:
-    app: frontend
+        - name:  http
+          containerPort: 8080
+          protocol: TCP
