--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,8 +17,11 @@ jobs:
         password: ${{ secrets.ACR_PASSWORD }}
     
     - run: |
-        docker build . -t azuretoolsacr.azurecr.io/k8sflask:${{ github.sha }}
-        docker push azuretoolsacr.azurecr.io/k8sflask:${{ github.sha }}
+        docker build . -t azuretoolsacr.azurecr.io/frontend:${{ github.sha }}
+        docker push azuretoolsacr.azurecr.io/frontend:${{ github.sha }}
+        docker build . -t azuretoolsacr.azurecr.io/backend:${{ github.sha }}
+        docker push azuretoolsacr.azurecr.io/backend:${{ github.sha }}
+        
       
 #     # Set the target AKS cluster.
 #     - uses: Azure/aks-set-context@v1
