--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -1,12 +1,26 @@
+
+name: microservice
 kind: Service
-apiVersion: v1
-metadata:
-  name:  frontend-svc
-spec:
-  selector:
-    app:  frontend
-  type:  LoadBalancer
-  ports:
-  - name:  http
-    port:  80
-    targetPort: 8080
+registry: azuretoolsacr.azurecr.io
+ingress:
+  - name: ingress
+    bindings:
+      - port: 8080
+    rules:
+      - path: /
+        service: frontend
+      - path: /backend
+        service: backend
+services:
+- name: backend
+  project: backend\backend.csproj
+- name: frontend
+  project: frontend\frontend.csproj
+- name: redis
+  image: redis
+  bindings:
+  - port: 6379
+    connectionString: "${host}:${port}"
+- name: redis-cli
+  image: redis
+  args: "redis-cli -h redis MONITOR"
