--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -1,12 +1,24 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: frontend-app-pod
-  namespace: default
+  name: nginx0-deployment
+  labels:
+    app: nginx0-deployment
 spec:
-  containers:
-    - name: main-app-container
-      image: azuretoolsacr.azurecr.io/frontend:v1
-      imagePullPolicy: Always
+  replicas: 2
+  selector:
+    matchLabels:
+      app: nginx0
+  template:
+    metadata:
+      labels:
+        app: nginx0
+    spec:
+      containers:
+      - name: nginx
+        image: azuretoolsacr.azurecr.io/nginx:v1
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 80
   imagePullSecrets:
-    - name: regcred
+    - name: regcred1
