--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -43,32 +43,24 @@ jobs:
        method: kubeconfig
        kubeconfig: ${{ secrets.KUBE_CONFIG }}
        
-      # Create namespace if doesn't exist
-    - run: |
-        kubectl create namespace ${{ env.NAMESPACE }} --dry-run=client -o json | kubectl apply -f -
+    - name: undeploy
+      run: |
+         tye undeploy
+       
+#       # Create namespace if doesn't exist
+#     - run: |
+#         kubectl create namespace ${{ env.NAMESPACE }} --dry-run=client -o json | kubectl apply -f -
         
-      # Create image pull secret for ACR
-    - uses: azure/k8s-create-secret@v1
-      with:
-        container-registry-url: ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io
-        container-registry-username: ${{ secrets.ACR_USER }}
-        container-registry-password: ${{ secrets.ACR_PASSWORD }}
-        secret-name: ${{ env.SECRET }}
-        namespace: ${{ env.NAMESPACE }}
-        arguments: --force true
-    
-#     # Deploy app to AKS
-#     - uses: azure/k8s-deploy@v1
+#       # Create image pull secret for ACR
+#     - uses: azure/k8s-create-secret@v1
 #       with:
-#        manifests: |
-#           ${{ github.workspace }}/manifests/deployment.yaml
-#           ${{ github.workspace }}/manifests/service.yaml
-#        images: |
-#           ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
-#        imagepullsecrets: |
-#           ${{ env.SECRET }}
-#           namespace: ${{ env.NAMESPACE }}
-   
+#         container-registry-url: ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io
+#         container-registry-username: ${{ secrets.ACR_USER }}
+#         container-registry-password: ${{ secrets.ACR_PASSWORD }}
+#         secret-name: ${{ env.SECRET }}
+#         namespace: ${{ env.NAMESPACE }}
+#         arguments: --force true
+    
 #     - name: Deploy to k8s
 #       run: kubectl apply -f k8s/ 
       
@@ -89,11 +81,11 @@ jobs:
 #          cluster-name: ${{ env.AZURE_AKS_CLUSTER }}
      
       
-#     - name: 🌐 kubectl apply
-#       run: |
-#         kubectl apply -f acr-nginx.yaml 
+    - name: 🌐 kubectl apply
+      run: |
+        kubectl apply -f https://raw.githubusercontent.com/dotnet/tye/master/docs/tutorials/hello-tye/redis.yaml
 
      
     - name: ☸ tye deploy
       run: |
-        tye deploy --interactive
+        tye deploy 
