--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -1,12 +1,12 @@
-kind: Service
 apiVersion: v1
+kind: Service
 metadata:
   name: frontend-svc
+  labels:
+    run: frontend
 spec:
-  selector:
-    app:  frontend
-  type:  LoadBalancer
   ports:
-  - name:  http
-    port:  80
-    targetPort: 8080
+  - port: 80
+    protocol: TCP
+  selector:
+    run: frontend
