--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: frontend
+  name: frontend-deployment
 spec:
   selector:
     matchLabels:
-      run: frontend
+      run: frontend-deployment
   replicas: 2
   template:
     metadata:
       labels:
-        run: frontend
+        run: frontend-deployment
     spec:
       containers:
-      - name: frontend
+      - name: frontend-deployment
         image:  azuretoolsacr.azurecr.io/frontend:v1
         ports:
         - containerPort: 80
