--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -1,12 +1,12 @@
-apiVersion: v1
 kind: Service
+apiVersion: v1
 metadata:
   name: frontend-svc
-  labels:
-    run: frontend
 spec:
-  ports:
-  - port: 80
-    protocol: TCP
   selector:
-    run: frontend
+    app:  frontend
+  type:  LoadBalancer
+  ports:
+  - name:  http
+    port:  80
+    targetPort: 8080
