--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -84,8 +84,11 @@ jobs:
     - name: 🌐 kubectl apply
       run: |
         kubectl apply -f https://raw.githubusercontent.com/dotnet/tye/master/docs/tutorials/hello-tye/redis.yaml
+        
+    - name: 🌐 Install ingress-nginx
+      run: |
+        kubectl apply -f https://aka.ms/tye/ingress/deploy
 
-     
     - name: ☸ tye deploy
       run: |
         tye deploy -v debug
