--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: 🛠 Install Tye tools
       run: |
-        dotnet tool install -g Microsoft.Tye --version "0.4.0-alpha.20371.1"
+        dotnet tool install --global Microsoft.Tye --version 0.11.0-alpha.22111.1
     - name: 🔐 Login to ACR
       uses: Azure/docker-login@v1  
       with:  
@@ -88,11 +88,15 @@ jobs:
 #     - name: 🌐 Install ingress-nginx
 #       run: |
 #         kubectl apply -f https://aka.ms/tye/ingress/deploy
+   
+    - name: pull
+      run: |
+        docker pull ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/frontend:1.0.0
 
     - name: ☸ tye deploy
       run: |
         tye deploy -v debug
         
-    - name: pull
-      run: |
-        docker pull ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/frontend:1.0.0
+#     - name: pull
+#       run: |
+#         docker pull ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/frontend:1.0.0
