--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -25,11 +25,12 @@ jobs:
     - name: 🧰 Setup .NET Core
       uses: actions/setup-dotnet@v1.5.0
       with:
-        dotnet-version: '3.1.x'
+        dotnet-version: 6.0.100
 
     - name: 🛠 Install Tye tools
       run: |
         dotnet tool install --global Microsoft.Tye --version 0.11.0-alpha.22111.1
+        
     - name: 🔐 Login to ACR
       uses: Azure/docker-login@v1  
       with:  
