--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -25,11 +25,11 @@ jobs:
     - name: 🧰 Setup .NET Core
       uses: actions/setup-dotnet@v1.5.0
       with:
-        dotnet-version: 6.0.100
+       dotnet-version: 3.1.300
 
     - name: 🛠 Install Tye tools
       run: |
-        dotnet tool install --global Microsoft.Tye --version 0.11.0-alpha.22111.1
+        dotnet tool install -g Microsoft.Tye --version "0.4.0-alpha.20371.1"
         
     - name: 🔐 Login to ACR
       uses: Azure/docker-login@v1  
@@ -98,6 +98,6 @@ jobs:
       run: |
         tye deploy -v debug
         
-    - name: pull
-      run: |
-        docker pull ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/frontend:1.0.0
+#     - name: pull
+#       run: |
+#         docker pull ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/frontend:1.0.0
