--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -43,6 +43,10 @@ jobs:
       with:
        method: kubeconfig
        kubeconfig: ${{ secrets.KUBE_CONFIG }}
+     
+    - name: build
+      run: |
+        docker build - < Dockerfile
        
 #     - name: undeploy
 #       run: |
@@ -90,9 +94,9 @@ jobs:
       run: |
         kubectl apply -f https://aka.ms/tye/ingress/deploy
    
-#     - name: pull
-#       run: |
-#         docker pull ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/frontend:1.0.0
+    - name: pull
+      run: |
+        docker pull ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/frontend:1.0.0
 
     - name: ☸ tye deploy
       run: |
