--- a/acr-nginx.yaml
+++ b/acr-nginx.yaml
@@ -15,8 +15,8 @@ spec:
         app: frontend
     spec:
       containers:
-      - name: frontend
-        image: azuretoolsacr.azurecr.io/frontend:v1
+      - name: nginx
+        image: azuretoolsacr.azurecr.io/nginx:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 80
