--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -75,15 +75,6 @@ jobs:
 #         creds: '${{ secrets.AZURE_CREDENTIALS }}'
 #         cluster-name: ${{ env.AZURE_AKS_CLUSTER }}
 #         resource-group: ${{ env.AKS_RESOURCE_GROUP }}
-        
-#     - uses: azure/actions/login@v1
-#       with:
-#         creds: ${{ secrets.AZURE_CREDENTIALS }}
-    
-#     - uses: azure/aks-set-context@v2.0
-#       with:
-#          resource-group:  ${{ env.AKS_RESOURCE_GROUP }}
-#          cluster-name: ${{ env.AZURE_AKS_CLUSTER }}
      
       
 #     - name: 🌐 kubectl apply
@@ -102,14 +93,10 @@ jobs:
 #       run: |
 #           kubectl apply -f acr-nginx.yaml
    
-#     - name: pull
-#       run: |
-#         docker pull ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/frontend:1.0.0
+    - name: pull
+      run: |
+        docker pull ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/frontend:v1
 
     - name: ☸ tye deploy
       run: |
         tye deploy -v debug
-        
-#     - name: pull
-#       run: |
-#         docker pull ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/frontend:1.0.0
