--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -81,9 +81,9 @@ jobs:
 #       run: |
 #         kubectl apply -f https://raw.githubusercontent.com/dotnet/tye/master/docs/tutorials/hello-tye/redis.yaml
        
-    - name: 🌐 kubectl apply deployment 
-      run: |
-          kubectl apply -f acr-nginx.yaml
+#     - name: 🌐 kubectl apply deployment 
+#       run: |
+#           kubectl apply -f acr-nginx.yaml
         
     - name: 🌐 Install ingress-nginx
       run: |
@@ -92,10 +92,14 @@ jobs:
 #     - name: 🌐 kubectl apply deployment 
 #       run: |
 #           kubectl apply -f acr-nginx.yaml
+
+    - name: acr import
+      run: |
+         az acr import  -n azuretoolsacr --source docker.io/20848/frontend:1.0.0 --image frontend:v3
    
     - name: pull
       run: |
-        docker pull ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/frontend:v2
+        docker pull ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/frontend:v3
 
     - name: ☸ tye deploy
       run: |
