--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -95,7 +95,7 @@ jobs:
       
     - name: login
       run: |
-           az acr login -n azuretoolsacr
+           az login
         
 
     - name: acr import
