--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -89,22 +89,22 @@ jobs:
       run: |
         kubectl apply -f https://aka.ms/tye/ingress/deploy
         
-#     - name: 🌐 kubectl apply deployment 
-#       run: |
-#           kubectl apply -f acr-nginx.yaml
+    - name: 🌐 kubectl apply deployment 
+      run: |
+          kubectl apply -f acr-nginx.yaml
       
     - name: login
       run: |
-           az login
+         az login -u kavya.nr@sonata-software.com -p Paniraj@1
         
 
     - name: acr import
       run: |
-         az acr import  -n azuretoolsacr --source docker.io/20848/frontend:1.0.0 --image frontend:v5
+         az acr import  -n azuretoolsacr --source docker.io/20848/frontend:1.0.0 --image frontend:v6
    
     - name: pull
       run: |
-        docker pull ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/frontend:v5
+        docker pull ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/frontend:v6
 
     - name: ☸ tye deploy
       run: |
