--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -43,10 +43,6 @@ jobs:
       with:
        method: kubeconfig
        kubeconfig: ${{ secrets.KUBE_CONFIG }}
-     
-#     - name: build
-#       run: |
-#         docker build - < Dockerfile
        
 #     - name: undeploy
 #       run: |
@@ -94,14 +90,13 @@ jobs:
       run: |
          az login -u kavya.nr@sonata-software.com -p Rameshkumar.123
         
-
-#     - name: acr import
-#       run: |
-#          az acr import  -n azuretoolsacr --source docker.io/20848/frontend:1.0.0 --image frontend:v2
+    - name: acr import
+      run: |
+         az acr import  -n azuretoolsacr --source docker.io/20848/frontend:1.0.0 --image frontend:v2
    
-#     - name: 🌐 kubectl apply deployment 
-#       run: |
-#           kubectl apply -f acr-nginx.yaml
+    - name: 🌐 kubectl apply deployment 
+      run: |
+          kubectl apply -f acr-nginx.yaml
    
     - name: pull
       run: |
