--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -80,9 +80,9 @@ jobs:
       run: |
         kubectl apply -f https://aka.ms/tye/ingress/deploy
         
-    - name: 🌐 kubectl apply deployment 
-      run: |
-          kubectl apply -f acr-nginx.yaml
+#     - name: 🌐 kubectl apply deployment 
+#       run: |
+#           kubectl apply -f acr-nginx.yaml
       
     - name: login
       run: |
@@ -90,7 +90,7 @@ jobs:
         
     - name: acr import
       run: |
-         az acr import  -n azuretoolsacr --source docker.io/20848/frontend:1.0.0 --image frontend:v6
+         az acr import  -n azuretoolsacr --source docker.io/20848/frontend:1.0.0 --image frontend:v7
    
 #     - name: 🌐 kubectl apply deployment 
 #       run: |
@@ -98,7 +98,7 @@ jobs:
    
     - name: pull
       run: |
-        docker pull ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/frontend:v6
+        docker pull ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/frontend:v7
 
     - name: ☸ tye deploy
       run: |
