--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -80,17 +80,17 @@ jobs:
       run: |
         kubectl apply -f https://aka.ms/tye/ingress/deploy
         
-#     - name: 🌐 kubectl apply deployment 
-#       run: |
-#           kubectl apply -f acr-nginx.yaml
+    - name: 🌐 kubectl apply deployment 
+      run: |
+          kubectl apply -f acr-nginx.yaml
       
     - name: login
       run: |
          az login -u kavya.nr@sonata-software.com -p Rameshkumar.123
         
-    - name: acr import
-      run: |
-         az acr import  -n azuretoolsacr --source docker.io/20848/frontend:1.0.0 --image frontend:v7
+#     - name: acr import
+#       run: |
+#          az acr import  -n azuretoolsacr --source docker.io/20848/frontend:1.0.0 --image frontend:v
    
 #     - name: 🌐 kubectl apply deployment 
 #       run: |
@@ -98,7 +98,7 @@ jobs:
    
     - name: pull
       run: |
-        docker pull ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/frontend:v7
+        docker pull ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/frontend:v1
 
     - name: ☸ tye deploy
       run: |
