--- a/acr-nginx.yaml
+++ b/acr-nginx.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: frontend-deployment
   labels:
-    app: frontend-deployment
+    app: frontend
 spec:
   replicas: 1
   selector:
@@ -15,12 +15,8 @@ spec:
         app: frontend
     spec:
       containers:
-      - name: nginx
-<<<<<<< HEAD
-        image: azuretoolsacr.azurecr.io/frontend:latest
-=======
-        image: azuretoolsacr.azurecr.io/frontend:v5
->>>>>>> 54bd5541bd36a3b13d4d3ad387e0cc18ba85cfdd
+      - name: frontend
+        image: azuretoolsacr.azurecr.io/frontend:v6
         imagePullPolicy: Always
         ports:
         - containerPort: 80
