--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -75,6 +75,10 @@ jobs:
       run: |
         kubectl apply -f https://raw.githubusercontent.com/dotnet/tye/master/docs/tutorials/hello-tye/redis.yaml
        
+#     - name: 🌐 kubectl apply deployment 
+#       run: |
+#           kubectl apply -f acr-nginx.yaml
+      
         
     - name: 🌐 Install ingress-nginx
       run: |
@@ -90,7 +94,7 @@ jobs:
         
     - name: acr import
       run: |
-         az acr import  -n azuretoolsacr --source docker.io/20848/frontend:1.0.0 --image frontend:v3
+         az acr import  -n azuretoolsacr --source docker.io/20848/frontend:1.0.0 --image frontend:v7
    
     - name: 🌐 kubectl apply deployment 
       run: |
@@ -98,7 +102,7 @@ jobs:
    
     - name: pull
       run: |
-        docker pull ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/frontend:v3
+        docker pull ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/frontend:v7
 
     - name: ☸ tye deploy
       run: |
